--- a/src/DeviceInfo.css
+++ b/src/DeviceInfo.css
@@ -1,6 +1,6 @@
 .mid{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   max-width: 100vw;
   flex-basis: content;
   flex-shrink: 0;
@@ -9,5 +9,10 @@ flex-flow: row wrap;
 
 .heading{
   width: 100%;
-  text-align: center;
+  font-size: 20px;
+}
+
+.subheading{
+  font-size: 15px;
+  margin: 10px;
 }
