--- a/src/components/SingleDevice.css
+++ b/src/components/SingleDevice.css
@@ -1,8 +1,18 @@
-.mid{
+/* .mid{
     text-align: center;
     padding: 30px 50px 30px 50px !important; 
     margin: 20px !important;
-}
+    font-family: sans-serif;   
+} */
+/* width: 11.875em;
+height: 15.875em;
+padding: 1rem;
+background-color: rgba(255, 255, 255, 0.074);
+border: 1px solid rgba(255, 255, 255, 0.222);
+-webkit-backdrop-filter: blur(20px);
+backdrop-filter: blur(20px);
+border-radius: .7rem;
+transition: all ease .3s; */
 
 .btn-container{
     display: flex;
@@ -11,17 +21,30 @@
   justify-content: center;
 }
 
+.card{
+    width: 300px;
+height: 200px;
+text-align: center;
+margin: 20px !important;
+border-radius: .7rem;
+padding: 10px;
+}
+
 .text{
-    font-family: 'Raleway',sans-serif; font-size: 15px; margin: 5px; text-align: center; text-transform: uppercase;
+    font-size: 10px;   
+    font-family: sans-serif;    
+    text-align: center;
+    font-weight: lighter;
 }
 
 .btn{
-    margin: 3px;
+    margin: 1.5px;
+    font-size: 10px;
 }
 
 .img{
-    height: 300px;
-    width: 120;
+    height: 110px;
+    width: 60px;
     margin: 20px;
 }
 
@@ -37,6 +60,7 @@
 
 .udid{
     text-transform: none;
+    font-size: 10px;
 }
 .noDisplay{
     display: none;
