--- a/src/DeviceInfo.css
+++ b/src/DeviceInfo.css
@@ -1,10 +1,32 @@
 .mid{
+  position: relative;
   display: flex;
   flex-direction: column;
-  max-width: 100vw;
+  min-width: 98vw;
   flex-basis: content;
   flex-shrink: 0;
 flex-flow: row wrap;
+width: 100%;
+}
+a {
+  color: #000000 !important;
+  font-family: sans-serif;
+  font-weight: lighter;
+  font-size: 20px;
+  text-decoration: none !important;
+}
+
+a:hover {
+  text-decoration:none !important; 
+  cursor:pointer;  
+}
+
+.container-mid{
+  background-color: #B4E4FF;
+  border-radius: 20px;
+  display: flex;
+  /* justify-content: space-between; */
+  align-items: center;
 }
 
 .heading{
@@ -15,4 +37,18 @@ flex-flow: row wrap;
 .subheading{
   font-size: 15px;
   margin: 10px;
+}
+
+.parent-mid{
+  display: block;
+  margin: 10px;
+}
+
+.arrow{
+  width: 100%;
+}
+
+.nav-container{
+  width: 100px;
+  height: 100px;
 }
