--- a/src/components/SingleDevice.css
+++ b/src/components/SingleDevice.css
@@ -1,18 +1,3 @@
-/* .mid{
-    text-align: center;
-    padding: 30px 50px 30px 50px !important; 
-    margin: 20px !important;
-    font-family: sans-serif;   
-} */
-/* width: 11.875em;
-height: 15.875em;
-padding: 1rem;
-background-color: rgba(255, 255, 255, 0.074);
-border: 1px solid rgba(255, 255, 255, 0.222);
--webkit-backdrop-filter: blur(20px);
-backdrop-filter: blur(20px);
-border-radius: .7rem;
-transition: all ease .3s; */
 
 .btn-container{
     display: flex;
@@ -22,18 +7,20 @@ transition: all ease .3s; */
 }
 
 .card{
-    width: 300px;
-height: 200px;
+    width: 200px;
+height: 100px;
 text-align: center;
 margin: 20px !important;
-border-radius: .7rem;
 padding: 10px;
+border-radius: 8px;
+border: 1px solid #eaeaea;
+box-shadow: 1.2rem 1.2rem 1.5rem rgba(0,0,0,.3);
 }
 
 .text{
     font-size: 10px;   
     font-family: sans-serif;    
-    text-align: center;
+    text-align: left;
     font-weight: lighter;
 }
 
@@ -43,9 +30,9 @@ padding: 10px;
 }
 
 .img{
-    height: 110px;
+    height: 60px;
     width: 60px;
-    margin: 20px;
+    margin: 5px;
 }
 
 .busy{
